# fastapi_zero

./: .gitignore  README.md  alembic.ini  database.db  pyproject.toml
fast_zero/: app.py  models.py
fastapi_zero/: app.py  models.py  settings.py  shcemas.py
migrations/: env.py  script.py.mako
migrations/versions/: 010a308a3391_updated_at_criado.py  22da44f991dd_valor_updated_at_atualizado.py  710aa0273859_create_at_aula4.py  7b1ecb07acf9_exercicio_02_aula_04.py  be305d6d0dea_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py
